edits from heckman and jorge to appendix and main paper

--- a/heckman.bib
+++ b/heckman.bib
@@ -16459,6 +16459,21 @@
   Owner                    = {The Detroyer}
 }
 
+@Article{Chen-Hong-Tarozzi_2008,
+  Title                    = {Semiparametric Efficiency in {GMM} Models with Auxiliary Data},
+  Author                   = {Xiaohong Chen and Hong, Han and Tarozzi, Alessandro},
+  Journal                  = {The Annals of Statistics},
+  Year                     = {2008},
+  Number                   = {2},
+  Pages                    = {808-843},
+  Volume                   = {36},
+
+  Date-added               = {2015-01-14 19:57:04 +0000},
+  Date-modified            = {2015-01-14 19:58:41 +0000},
+  Owner                    = {Jenna},
+  Timestamp                = {2016.09.07}
+}
+
 @Article{Cherchye-etal_2012_AER,
   Title                    = {Married with Children: A Collective Labor Supply Model with Detailed Time Use and Intrahousehold Expenditure Information},
   Author                   = {Cherchye, Laurens and De Rock, Bram and Vermeulen, Frederic},
@@ -53096,6 +53111,22 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2016.03.31}
 }
 
+@Article{Majorano-etal_2009_CC-in-P,
+  Title                    = {Adults' and Children's Language in Different Situational Contexts in {I}talian Nursery and Infant Schools},
+  Author                   = {Majorano, Marinella and Cigala, Ada and Corsano, Paola},
+  Journal                  = {Child Care in Practice},
+  Year                     = {2009},
+
+  Month                    = {October},
+  Number                   = {4},
+  Pages                    = {279--297},
+  Volume                   = {15},
+
+  Doi                      = {10.1080/13575270903149349},
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.09.07}
+}
+
 @Book{Malizia-Cicatelli_2011_BOOK_Catholic-School,
   Title                    = {The {C}atholic {S}chool under Scrutiny: Ten Years of Research in {I}taly (1998--2008)},
   Author                   = {Malizia, Guglielmo and Cicatelli, Sergio},
@@ -66287,6 +66318,22 @@ Robinson, Lara Rachel},
   Address                  = {Ithaca, NY},
 
   Timestamp                = {2009.03.22}
+}
+
+@InCollection{Ribolzi_2013_Italy,
+  Title                    = {{I}taly: From State Monopoly to Rising of a System of Schools},
+  Author                   = {Ribolzi, Luisa},
+  Booktitle                = {Education Policy Reform Trends in {G}20 Members},
+  Publisher                = {Springer-Verlag},
+  Year                     = {2013},
+
+  Address                  = {Heidelberg, Germany},
+  Editor                   = {Wang, Yan},
+  Pages                    = {105--127},
+
+  Doi                      = {10.1007/978-3-642-38931-3_6},
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.09.07}
 }
 
 @TechReport{Ricciuti_et_al_2004_Even_Start-Eval_USDoE,
@@ -83076,13 +83123,26 @@ early childhood education and pre-kindergarten programs},
   Timestamp                = {2014.06.16}
 }
 
+@Book{Edwards-etal-eds_1998_Hundred-Languages,
+  Title                    = {The Hundred Languages of Children: The {R}eggio {E}milia Approach -- Advanced Reflections},
+  Editor                   = {Edwards, Carolyn and Gandini, Lella and Forman, George},
+  Publisher                = {Ablex Publishing},
+  Year                     = {1998},
+
+  Address                  = {Westport, CT},
+  Edition                  = {2},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.09.07}
+}
+
 @Book{Edwards_etal_1993_ReggioEmilia_BOOK,
   Title                    = {The Hundred Languages of Children: The {R}eggio {E}milia Approach to Early Childhood Education},
-  Editor                   = {Edwards, Carolyn, and Gandini, Lella, and Forman, George},
+  Editor                   = {Edwards, Carolyn and Gandini, Lella and Forman, George},
   Publisher                = {Ablex Publishing Corporation},
   Year                     = {1993},
 
-  Address                  = {355 Chestnut Street, Norwood, NJ},
+  Address                  = {Norwood, NJ},
 
   Owner                    = {Stallings_LLC},
   Timestamp                = {2016.09.01}
