--- a/preamble.tex
+++ b/preamble.tex
@@ -94,7 +94,8 @@
 %Math Environments
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{claim}[theorem]{Claim}
-\newtheorem{assumption}[theorem]{Assumption}
+\newtheorem{assumption}{Assumption}
+\renewcommand\theassumption{A--\arabic{assumption}}
 \newtheorem{definition}[theorem]{Definition}
 \newtheorem{hypothesis}[theorem]{Hypothesis}
 \newtheorem{property}[theorem]{Property}
@@ -125,7 +126,7 @@
 
 \newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
-\newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}} 
+\newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 
 \newcommand{\mr}{\multirow}
 \newcommand{\mc}{\multicolumn}
