typists changes from ysterdya

--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -2,7 +2,7 @@
 \input{preamble}
 \input{output/mainstatistics}
 
-\externaldocument{abc_comprehensivecba}
+\externaldocument{abc_comprehensivecba_2016-09-09b_jld}
 \pagenumbering{roman}
 
 \begin{document}
