--- a/Appendices/ProgramCostsAlt.tex
+++ b/Appendices/ProgramCostsAlt.tex
@@ -30,7 +30,7 @@ Note: This figure is a photograph provides the estimates for the personnel wages
 
 \noindent Interviews with the programs' staff \citet{projectcare2014interviews,abc2014-2015interviews}, inform us about additional costs of the programs. An example is the salary of a social worker, who is not part of some of the of the costs estimates reported before but was part of the staff implementing treatment. These interviews are available upon request.\\ 
 
-\noindent Finally, a valuable source is a report written by the program staff \citet{FPG_1979_Progress-Report}. As we note in Section~\ref{section:programscosts}, this report produced an estimate of the cost in a completely independent way, although perhaps using a the same or similar primary sources. Our calculation of the costs comes very close to those in \citet{FPG_1979_Progress-Report}. \\
+\noindent Finally, a valuable source is a report written by the program staff \citet{FPG_1979_Progress-Report}. As we note in Section~\ref{section:programscosts}, this report produced an estimate of the cost in a completely independent way, although perhaps using the same or similar primary sources. Our calculation of the costs comes very close to those in \citet{FPG_1979_Progress-Report}. \\
 
 \noindent We summarize the yearly program costs of ABC/CARE in Table~\ref{tab:totalcosts}. \\
 
