--- a/Appendices/Methodology.tex
+++ b/Appendices/Methodology.tex
@@ -32,28 +32,28 @@ treatment effects.
 controlling for treatment status and three additional covariates. The additional covariates are
 chosen among a set of variables, as detailed in Appendix~\ref{appendix:bvariables}. We account for the sampling variation implied in the estimation by the (IPW) scheme when producing our bootstrap-based inference.
 
-\noindent \textbf{[JJH: Is this still valid?] [JLG: Yes. Please see Appendix~\ref{appendix:bvariables}. It contains the discussion on how we select control variables when estimating the IPW and when controlling for background variables when estimating treatment effects. The discussion on background variables to produce the forecasts is separate.]}\\
+\noindent \textbf{[JJH: Is this still valid?] [JLG: Yes. Please see Appendix~\ref{appendix:bvariables}. It contains the discussion on how we select control variables when estimating the IPW and when controlling for background variables when estimating treatment effects. The discussion on background variables to produce the predictions is separate.]}\\
 
 \subsection{Incomplete Data}
 \label{app:method_noobs}
 
-\noindent We do not observe life-cycle profiles for outcomes that are crucial to evaluate the effect of ABC/CARE. The three main examples are parental income, subject labor income, and public-transfer income. The importance of the first one is that ABC/CARE, in practice, had a childcare element. It relaxed the time constraints of the mothers of the treated children, who therefore were able to study or to work more. Potentially, this shifted the life-cycle profile of the mothers, either by allowing her to have more schooling or more working experience. We estimate these profiles. Similarly, a comprehensive evaluation accounts for the effect on the whole life-cycle profile of subject labor income and public-transfer income. We follow the strategy in Section~\ref{section:cbamethodology} to identify and estimate these profiles, i.e. to produce forecasts.
+\noindent We do not observe life-cycle profiles for outcomes that are crucial to evaluate the effect of ABC/CARE. The three main examples are parental income, subject labor income, and public-transfer income. The importance of the first one is that ABC/CARE, in practice, had a childcare element. It relaxed the time constraints of the mothers of the treated children, who therefore were able to study or to work more. Potentially, this shifted the life-cycle profile of the mothers, either by allowing her to have more schooling or more working experience. We estimate these profiles. Similarly, a comprehensive evaluation accounts for the effect on the whole life-cycle profile of subject labor income and public-transfer income. We follow the strategy in Section~\ref{section:cbamethodology} to identify and estimate these profiles, i.e. to produce predictions.
 
 \subsubsection{Subject and Transfer Income}
 
-\noindent Labor income and public-transfer income of subjects are only observed at ages 21 and 30.\footnote{At age 21, public-transfer income includes Aid to Families with Dependent Children (AFDC) subsidies, food stamps, survivor benefits, disability benefits, social security, rent subsidies, and fuel subsidies. At age 30, public-transfer income includes food stamps, welfare, housing assistance, workman's compensation, disability, social security, supplemental security income, unemployment benefits, worker's compensation insurance, fuel subsidies, educational and aid grants, and other forms of welfare.} For all other ages, we produce a forecast (either an interpolation or an extrapolation).
+\noindent Labor income and public-transfer income of subjects are only observed at ages 21 and 30.\footnote{At age 21, public-transfer income includes Aid to Families with Dependent Children (AFDC) subsidies, food stamps, survivor benefits, disability benefits, social security, rent subsidies, and fuel subsidies. At age 30, public-transfer income includes food stamps, welfare, housing assistance, workman's compensation, disability, social security, supplemental security income, unemployment benefits, worker's compensation insurance, fuel subsidies, educational and aid grants, and other forms of welfare.} For all other ages, we produce a prediction (either an interpolation or an extrapolation).
 
 \subsubsection{Parental Income}
 
-\noindent We use the same methodology to identify and estimate the life-cycle profile of parental income as the one we use for subject and transfer income. There is one difference to note. For subject and transfer income, we initialize the forecast at age 21 and go all the way to age 65---assumed age of retirement. For parental income, we initialize the forecast at age 0, in which we observe the outcome. For ages 2, 3, 4, 5, 9, 12, and 15 we do not use an estimate because we observe the data.
+\noindent We use the same methodology to identify and estimate the life-cycle profile of parental income as the one we use for subject and transfer income. There is one difference to note. For subject and transfer income, we initialize the prediction at age 21 and go all the way to age 65---assumed age of retirement. For parental income, we initialize the prediction at age 0, in which we observe the outcome. For ages 2, 3, 4, 5, 9, 12, and 15 we do not use an estimate because we observe the data.
 
 \textbf{[JJH: Jorge, can we not do better? Impute profiles using PSID?]}\textbf{[JLG: the reason for doing a linear interpolation is that the support in the PSID doesn't let us do much here. The information on the parents is not very complete. PSID of course surveys parents and children, but the matches here are adults and their parents barely appear in PSID. In other words, we are matching the ABC/CARE subjects to individuals who are not young enough as for us to obtain a good income profile of their parents.  We have eight observations between ages 0 and 15 and we are relying on that now.]} \textbf{[JJH: No, you are missing my point. Once the woman works she continues to work -at age 35 or so they have 25-30 years of work life left. Right now we underestimate parental income.] [JLG: I agree. I'm sorry for the confusion but the argument to follow up to age 15 only was other (that the child may not benefit from this given he might have moved out or so). The argument of women's wage growth was only recently brought up. I'm producing a forecast.]}\\
 
-\subsection{Auxiliary Datasets and Variables Used to Forecast}
+\subsection{Auxiliary Datasets and Variables Used to Predict}
 
 \subsubsection{Auxiliary Datasets}
 
-\noindent We rely on the following datasets to estimate life-cycle profiles. We use this data in a very similar way to estimate the three life-cycle profiles of interest. For subject's labor income and parental labor income we use the exact same data. Two differences are: (i) for parental income, we need to produce a life-cycle profile from where the child is zero years old to when her mother is 65 (age at which we assume she retires); (ii) for parental income, we observe more years, and therefore need to produce a forecast for less time points.
+\noindent We rely on the following datasets to estimate life-cycle profiles. We use this data in a very similar way to estimate the three life-cycle profiles of interest. For subject's labor income and parental labor income we use the exact same data. Two differences are: (i) for parental income, we need to produce a life-cycle profile from where the child is zero years old to when her mother is 65 (age at which we assume she retires); (ii) for parental income, we observe more years, and therefore need to produce predictions for less time points.
 
 \noindent A brief description of the auxiliary or non-experimental datasets and their use follows.\\
 
@@ -73,17 +73,17 @@ chosen among a set of variables, as detailed in Appendix~\ref{appendix:bvariable
 
 \noindent As we did with the NLSY, we restrict the CNLSY sample to individuals with labor income less than \$300,000 (2014 USD) at any given year. In addition to this, we limit the sample to subjects born between 1978 and 1983. Because the CNLSY data extends to 2012, this implies that we use the most recent data from the CNLSY in which individuals are aged 29 to 34. Finally, given the biennial nature of the survey, we perform a linear interpolation on the variables that enter into our prediction model. This allows us to use as much of the CNLSY data as possible at every age when interpolating subject income. \\
 
-\noindent \textbf{The Panel Survey of Income Dynamics (PSID)} is a longitudinal household survey containing between 5,000 and 8,500 families in each wave. It began as a yearly survey in 1968 and has been fielded biennially since 1996. When appropriately weighted, the PSID is designed to be representative of U.S. households. The PSID provides extensive information concerning demographics, economic outcomes, health outcomes, marriage and fertility, and more. In addition to using the PSID to forecast future earnings of ABC/CARE subjects, we use the PSID to forecast health outcomes. See Appendix \ref{section:data_psid} for details on how the PSID relates to health outcomes. \\
+\noindent \textbf{The Panel Survey of Income Dynamics (PSID)} is a longitudinal household survey containing between 5,000 and 8,500 families in each wave. It began as a yearly survey in 1968 and has been fielded biennially since 1996. When appropriately weighted, the PSID is designed to be representative of U.S. households. The PSID provides extensive information concerning demographics, economic outcomes, health outcomes, marriage and fertility, and more. In addition to using the PSID to predict future earnings of ABC/CARE subjects, we use the PSID to predict health outcomes. See Appendix \ref{section:data_psid} for details on how the PSID relates to health outcomes. \\
 
 \noindent Similar to the CNLSY, we restrict the PSID to individuals born between 1945 and 1981. Because the data extend to 2013, we use the most recent subsample of individuals aged 30 to 67. We also exclude all individuals with labor income exceeding \$300,000 (2014 USD) in any given year. Finally, given the biennial nature of the survey, we perform a linear interpolation on the variables that enter into our prediction model. This allows us to use as much of the PSID data as possible at every age to interpolate subject income. \\
 
-\subsubsection{Variables Used to Forecast}
+\subsubsection{Variables Used to Predict}
 
-\noindent We base our forecasts on three types of variables. We call $X,W,Z$ forecasting variables. Variables that could have not been affected by treatment, or pre-treatment variables. We divide these into two categories, pre-treatment variables used in the randomization protocol of ABC/CARE and pre-treatment variables not used in this protocol. We denote this by $Z$ and $W$, respectively. We let $X$ denote denote the variables that could have been affected by treatment.\\
+\noindent We base our predictions on three types of variables. We call $X,W,Z$ prediction variables. Variables that could have not been affected by treatment, or pre-treatment variables. We divide these into two categories, pre-treatment variables used in the randomization protocol of ABC/CARE and pre-treatment variables not used in this protocol. We denote this by $Z$ and $W$, respectively. We let $X$ denote  the variables that could have been affected by treatment.\\
 
-\noindent At each age, our forecast is a function of the forecasting variables.\footnote{As we explain in the main paper, it is also possible to let our forecast in $t$ depend on our forecast in $t-1$. Suppose we want to forecast $Y_{t}$. We can base our forecast not only on $X,W,Z$ but also on our forecast of $Y_{t-1}$.} Our forecast is based on identifying and estimating a relationship between the outcome we want to forecast at time $t$, $Y_{t}$, in the non-experimental samples and then using this relationship in the experimental sample.\\
+\noindent At each age, our prediction is a function of the prediction variables.\footnote{As we explain in the main paper, it is also possible to let our prediction in $t$ depend on our prediction in $t-1$. Suppose we want to predict $Y_{t}$. We can base our prediction not only on $X,W,Z$ but also on our prediction of $Y_{t-1}$.} Our prediction is based on identifying and estimating a relationship between the outcome we want to predict at time $t$, $Y_{t}$, in the non-experimental samples and then using this relationship in the experimental sample.\\
 
-\noindent To be considered a forecasting variable, the variable must satisfy three restrictions: (i) it has to be available in the experimental and non-experimental samples; (ii) it has to have predictive power on the forecasted outcome; (iii) a common support assumption between the experimental and non-experimental datasets needs to be satisfied, as we formalize in Section~\ref{section:methodology}.\\
+\noindent To be considered a prediction variable, the variable must satisfy three restrictions: (i) it has to be available in the experimental and non-experimental samples; (ii) it has to have predictive power on the predicted outcome; (iii) a common support assumption between the experimental and non-experimental datasets needs to be satisfied, as we formalize in Section~\ref{section:methodology}.\\
 
 \noindent For a variable to satisfy restrictions (i) and (ii), it needs to be the case not only that the variable is available in the non-experimental sample but also that the survey question leading to it was introduced far enough back in time for us to observe it in a range that is common to the range in which we observe the variables in the experimental sample. To illustrate this, consider the case of body-mass index in the PSID. Survey questions leading to its availability were introduced in the late 1990s. The sample for whom the question was introduced, however, does not span enough observations for its support to cover the support of the experimental sample.\\
 
@@ -93,7 +93,7 @@ chosen among a set of variables, as detailed in Appendix~\ref{appendix:bvariable
 
 \subsubsection{Common Support}
 
-\noindent We \textbf{assume common support} between these auxiliary datasets and the analysis sample. This is required in order for us to reliably use external data to provide forecast for the ABC/CARE samples. Figure~\ref{fig:support} validates this assumption by displaying the overlapping support sets of ABC/CARE and our auxiliary data for the variables used to interpolate and extrapolate earnings.\footnote{For the male and black indicators, we do not provide evidence of common support. All three non-experimental samples have vast numbers of males, females, and black individuals to cover the support in the experimental samples.}\\
+\noindent We \textbf{assume common support} between these auxiliary datasets and the analysis sample. This is required in order for us to reliably use external data to provide predictions for the ABC/CARE samples. Figure~\ref{fig:support} validates this assumption by displaying the overlapping support sets of ABC/CARE and our auxiliary data for the variables used to interpolate and extrapolate earnings.\footnote{For the male and black indicators, we do not provide evidence of common support. All three non-experimental samples have vast numbers of males, females, and black individuals to cover the support in the experimental samples.}\\
 
 \begin{figure}[H]
 		\caption{Support of ABC/CARE and Auxiliary Data} \label{fig:support}
@@ -153,7 +153,7 @@ chosen among a set of variables, as detailed in Appendix~\ref{appendix:bvariable
 
 \subsubsection{Predictive Power}
 
-\noindent We present evidence on the second restriction next. Tables~\ref{table:predpsid} to \ref{table:predcnlsy} show that, in each of the auxiliary samples that we use, the forecasting variables $X,W,Z$ are strong predictors of labor income at age 30. We present this evidence at age 30 both for brevity and to compare the predictive power of $X,W,Z$ on the outcomes we consider in the ABC/CARE sample.
+\noindent We present evidence on the second restriction next. Tables~\ref{table:predpsid} to \ref{table:predcnlsy} show that, in each of the auxiliary samples that we use, the prediction variables $X,W,Z$ are strong predictors of labor income at age 30. We present this evidence at age 30 both for brevity and to compare the predictive power of $X,W,Z$ on the outcomes we consider in the ABC/CARE sample.
 
 \begin{table}[H] 
 \begin{threeparttable}
@@ -263,16 +263,16 @@ chosen among a set of variables, as detailed in Appendix~\ref{appendix:bvariable
 
 \subsubsection{Sensitivity Analysis}
 
-\noindent An immediate route of inquiry is the sensitivity of our forecasts to the use of different forecasting variables. We reproduce three exercises to analyze this for labor income: (i) our baseline forecast, which is based on $X,W,Z$ and the lagged value of the forecasted labor income, i.e. at time $t$ we base the forecast on $X,W,Z$ and (forecasted) labor income at $t-1$; (ii) the same as (i) but without using lagged labor income; (iii) the same as (i) but without using $X$; (iv) a forecast based exclusively on $W,Z$; (v) a forecast based exclusively on $X$.\\
+\noindent An immediate route of inquiry is the sensitivity of our predictions to the use of different prediction variables. We reproduce three exercises to analyze this for labor income: (i) our baseline prediction, which is based on $X,W,Z$ and the lagged value of the predicted labor income, i.e. at time $t$ we base the prediction on $X,W,Z$ and (predicted) labor income at $t-1$; (ii) the same as (i) but without using lagged labor income; (iii) the same as (i) but without using $X$; (iv) a prediction based exclusively on $W,Z$; (v) a prediction based exclusively on $X$.\\
 
-\noindent Although the forecast in (i) is the most accurate if compared to low-skilled individuals in the PSID, they are robust to sensitivity analysis.\footnote{We obtain similar results exercises for transfer income and parental labor income and they are available under request.}
+\noindent Although the prediction in (i) is the most accurate if compared to low-skilled individuals in the PSID, they are robust to sensitivity analysis.\footnote{We obtain similar results exercises for transfer income and parental labor income and they are available under request.}
 
 \begin{sidewaysfigure}[!htbp]
 \centering
-\caption{Labor Income Profiles, Forecast Based on Lageed Labor Income and $X,W,Z$}\label{fig:labor-income-profiles}
+\caption{Labor Income Profiles, Prediction Based on Lagged Labor Income and $X,W,Z$}\label{fig:labor-income-profiles}
 \begin{subfigure}[h]{0.4\textwidth}
 		\centering
-		\caption{Forecasted for ABC/CARE Males} \label{fig:abcare1}
+		\caption{Predicted for ABC/CARE Males} \label{fig:abcare1}
 		\includegraphics[width=\textwidth]{output/labor_25-60_male_1.eps}
 \end{subfigure}%
 \begin{subfigure}[h]{0.4\textwidth}
@@ -282,7 +282,7 @@ chosen among a set of variables, as detailed in Appendix~\ref{appendix:bvariable
 \end{subfigure}
 \begin{subfigure}[h]{0.4\textwidth}
 		\centering
-		\caption{Forecasted for ABC/CARE Females} \label{fig:abcare0}
+		\caption{Predicted for ABC/CARE Females} \label{fig:abcare0}
 		\includegraphics[width=\textwidth]{output/labor_25-60_female_1.eps}
 \end{subfigure}%
 \begin{subfigure}[h]{0.4\textwidth}
@@ -291,15 +291,15 @@ chosen among a set of variables, as detailed in Appendix~\ref{appendix:bvariable
 		\includegraphics[width=\textwidth]{output/psid_incomeprofiles_s0.eps}
 \end{subfigure}
 \footnotesize \justify
-Note: Panels (a) and (c) display the forecasted labor income profiles for ABC/CARE males and females by treatment status, based on forecasts that combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). Panels (b) and (d) display the mean labor income profile of disadvantaged males and females in the Panel Study of Income Dynamics (PSID), where disadvantaged is defined as having 12 years of education or less.\\
+Note: Panels (a) and (c) display the predicted labor income profiles for ABC/CARE males and females by treatment status, based on predictions that combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). Panels (b) and (d) display the mean labor income profile of disadvantaged males and females in the Panel Study of Income Dynamics (PSID), where disadvantaged is defined as having 12 years of education or less.\\
 \end{sidewaysfigure}
 
 \begin{sidewaysfigure}[!htbp]
 \centering
-\caption{Labor Income Profiles, Forecast Based on $X,W,Z$}\label{fig:labor-income-profiles}
+\caption{Labor Income Profiles, Prediction Based on $X,W,Z$}\label{fig:labor-income-profiles}
 \begin{subfigure}[h]{0.4\textwidth}
 		\centering
-		\caption{Forecasted for ABC/CARE Males} \label{fig:abcare1}
+		\caption{Predicted for ABC/CARE Males} \label{fig:abcare1}
 		\includegraphics[width=\textwidth]{output/labor_25-60_male_2.eps}
 \end{subfigure}%
 \begin{subfigure}[h]{0.4\textwidth}
@@ -309,7 +309,7 @@ Note: Panels (a) and (c) display the forecasted labor income profiles for ABC/CA
 \end{subfigure}
 \begin{subfigure}[h]{0.4\textwidth}
 		\centering
-		\caption{Forecasted for ABC/CARE Females} \label{fig:abcare0}
+		\caption{Predicted for ABC/CARE Females} \label{fig:abcare0}
 		\includegraphics[width=\textwidth]{output/labor_25-60_female_2.eps}
 \end{subfigure}%
 \begin{subfigure}[h]{0.4\textwidth}
@@ -318,15 +318,15 @@ Note: Panels (a) and (c) display the forecasted labor income profiles for ABC/CA
 		\includegraphics[width=\textwidth]{output/psid_incomeprofiles_s0.eps}
 \end{subfigure}
 \footnotesize \justify
-Note: Panels (a) and (c) display the forecasted labor income profiles for ABC/CARE males and females by treatment status, based on forecasts that combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). Panels (b) and (d) display the mean labor income profile of disadvantaged males and females in the Panel Study of Income Dynamics (PSID), where disadvantaged is defined as having 12 years of education or less.\\
+Note: Panels (a) and (c) display the predicted labor income profiles for ABC/CARE males and females by treatment status, based on predictions that combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). Panels (b) and (d) display the mean labor income profile of disadvantaged males and females in the Panel Study of Income Dynamics (PSID), where disadvantaged is defined as having 12 years of education or less.\\
 \end{sidewaysfigure}
 
 \begin{sidewaysfigure}[!htbp]
 \centering
-\caption{Labor Income Profiles, Forecast Based on Lageed Labor Income and $W,Z$}\label{fig:labor-income-profiles}
+\caption{Labor Income Profiles, Prediction Based on Lagged Labor Income and $W,Z$}\label{fig:labor-income-profiles}
 \begin{subfigure}[h]{0.4\textwidth}
 		\centering
-		\caption{Forecasted for ABC/CARE Males} \label{fig:abcare1}
+		\caption{Predicted for ABC/CARE Males} \label{fig:abcare1}
 		\includegraphics[width=\textwidth]{output/labor_25-60_male_3.eps}
 \end{subfigure}%
 \begin{subfigure}[h]{0.4\textwidth}
@@ -336,7 +336,7 @@ Note: Panels (a) and (c) display the forecasted labor income profiles for ABC/CA
 \end{subfigure}
 \begin{subfigure}[h]{0.4\textwidth}
 		\centering
-		\caption{Forecasted for ABC/CARE Females} \label{fig:abcare0}
+		\caption{Predicted for ABC/CARE Females} \label{fig:abcare0}
 		\includegraphics[width=\textwidth]{output/labor_25-60_female_3.eps}
 \end{subfigure}%
 \begin{subfigure}[h]{0.4\textwidth}
@@ -345,15 +345,15 @@ Note: Panels (a) and (c) display the forecasted labor income profiles for ABC/CA
 		\includegraphics[width=\textwidth]{output/psid_incomeprofiles_s0.eps}
 \end{subfigure}
 \footnotesize \justify
-Note: Panels (a) and (c) display the forecasted labor income profiles for ABC/CARE males and females by treatment status, based on forecasts that combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). Panels (b) and (d) display the mean labor income profile of disadvantaged males and females in the Panel Study of Income Dynamics (PSID), where disadvantaged is defined as having 12 years of education or less.\\
+Note: Panels (a) and (c) display the predicted labor income profiles for ABC/CARE males and females by treatment status, based on predictions that combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). Panels (b) and (d) display the mean labor income profile of disadvantaged males and females in the Panel Study of Income Dynamics (PSID), where disadvantaged is defined as having 12 years of education or less.\\
 \end{sidewaysfigure}
 
 \begin{sidewaysfigure}[!htbp]
 \centering
-\caption{Labor Income Profiles, Forecast Based $X$}\label{fig:labor-income-profiles}
+\caption{Labor Income Profiles, Prediction Based on $X$}\label{fig:labor-income-profiles}
 \begin{subfigure}[h]{0.4\textwidth}
 		\centering
-		\caption{Forecasted for ABC/CARE Males} \label{fig:abcare1}
+		\caption{Predicted for ABC/CARE Males} \label{fig:abcare1}
 		\includegraphics[width=\textwidth]{output/labor_25-60_male_4.eps}
 \end{subfigure}%
 \begin{subfigure}[h]{0.4\textwidth}
@@ -363,7 +363,7 @@ Note: Panels (a) and (c) display the forecasted labor income profiles for ABC/CA
 \end{subfigure}
 \begin{subfigure}[h]{0.4\textwidth}
 		\centering
-		\caption{Forecasted for ABC/CARE Females} \label{fig:abcare0}
+		\caption{Predicted for ABC/CARE Females} \label{fig:abcare0}
 		\includegraphics[width=\textwidth]{output/labor_25-60_female_4.eps}
 \end{subfigure}%
 \begin{subfigure}[h]{0.4\textwidth}
@@ -372,15 +372,15 @@ Note: Panels (a) and (c) display the forecasted labor income profiles for ABC/CA
 		\includegraphics[width=\textwidth]{output/psid_incomeprofiles_s0.eps}
 \end{subfigure}
 \footnotesize \justify
-Note: Panels (a) and (c) display the forecasted labor income profiles for ABC/CARE males and females by treatment status, based on forecasts that combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). Panels (b) and (d) display the mean labor income profile of disadvantaged males and females in the Panel Study of Income Dynamics (PSID), where disadvantaged is defined as having 12 years of education or less.\\
+Note: Panels (a) and (c) display the predicted labor income profiles for ABC/CARE males and females by treatment status, based on predictions that combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). Panels (b) and (d) display the mean labor income profile of disadvantaged males and females in the Panel Study of Income Dynamics (PSID), where disadvantaged is defined as having 12 years of education or less.\\
 \end{sidewaysfigure}
 
 \begin{sidewaysfigure}[!htbp]
 \centering
-\caption{Labor Income Profiles, Forecast Based on $W,Z$}\label{fig:labor-income-profiles}
+\caption{Labor Income Profiles, Prediction Based on $W,Z$}\label{fig:labor-income-profiles}
 \begin{subfigure}[h]{0.4\textwidth}
 		\centering
-		\caption{Forecasted for ABC/CARE Males} \label{fig:abcare1}
+		\caption{Predicted for ABC/CARE Males} \label{fig:abcare1}
 		\includegraphics[width=\textwidth]{output/labor_25-60_male_5.eps}
 \end{subfigure}%
 \begin{subfigure}[h]{0.4\textwidth}
@@ -390,7 +390,7 @@ Note: Panels (a) and (c) display the forecasted labor income profiles for ABC/CA
 \end{subfigure}
 \begin{subfigure}[h]{0.4\textwidth}
 		\centering
-		\caption{Forecasted for ABC/CARE Females} \label{fig:abcare0}
+		\caption{Predicted for ABC/CARE Females} \label{fig:abcare0}
 		\includegraphics[width=\textwidth]{output/labor_25-60_female_5.eps}
 \end{subfigure}%
 \begin{subfigure}[h]{0.4\textwidth}
@@ -399,7 +399,7 @@ Note: Panels (a) and (c) display the forecasted labor income profiles for ABC/CA
 		\includegraphics[width=\textwidth]{output/psid_incomeprofiles_s0.eps}
 \end{subfigure}
 \footnotesize \justify
-Note: Panels (a) and (c) display the forecasted labor income profiles for ABC/CARE males and females by treatment status, based on forecasts that combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). Panels (b) and (d) display the mean labor income profile of disadvantaged males and females in the Panel Study of Income Dynamics (PSID), where disadvantaged is defined as having 12 years of education or less.\\
+Note: Panels (a) and (c) display the predicted labor income profiles for ABC/CARE males and females by prediction status, based on predictions that combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). Panels (b) and (d) display the mean labor income profile of disadvantaged males and females in the Panel Study of Income Dynamics (PSID), where disadvantaged is defined as having 12 years of education or less.\\
 \end{sidewaysfigure}
 
 \paragraph{Health Costs}
@@ -434,7 +434,7 @@ to estimate the treatment effect on the cost of criminal activity at every age f
 
 \noindent We take the sum of the treatment effects on each component of the benefits to be the total benefit, $B_t$, of the ABC/CARE program. This includes parental income, subject labor income, and QALYs (quality-adjusted life years). Treatment effects on costs borne by the subject or society have their signs reversed and are included as benefits. We do this for subject public-transfer income, education costs, crime costs, control substitution costs, and health costs. To account for deadweight loss, we impose a marginal welfare cost of 50\% by multiplying public costs by a factor of $0.5$ when they are a direct transfer from the government to the individuals\footnote{There is no clear consensus on the marginal welfare cost of tax revenue. However, most researchers estimate the welfare cost per tax dollar to be between \$0.30 and \$0.50. See \citet{Feldstein_1999_REStat}, \citet{Heckman_Smith_1998_evaluating}, and \citet{Browning_1987_AER}.} When the public costs are not a direct transfer from the government to the individuals, we multiply them by a factor of $1.5$.\\
 
-\noindent The principle for multiplying the public costs is the following. We evaluate the social benefits of ABC/CARE and do not place a value on who receives the money. The only social cost from a direct transfer is the dead-weight loss that it generates: $50\%$ of its total value. We do not consider education and criminal costs a direct transfer. Thus, we multiply them by a factor of $1.5$: the value of their cost plus $50\%$ of the value of their cost (the dead-weight loss implied in raising the public revenue to fund them). Table \ref{table:bc_comp} lists the factor we use to multiply each cost to account for its implied dead-weigh loss.\\
+\noindent The principle for multiplying the public costs is the following. We evaluate the social benefits of ABC/CARE and do not place a value on who receives the money. The only social cost from a direct transfer is the dead-weight loss that it generates: $50\%$ of its total value. We do not consider education and criminal costs a direct transfer. Thus, we multiply them by a factor of $1.5$: the value of their cost plus $50\%$ of the value of their cost (the dead-weight loss implied in raising the public revenue to fund them). Table \ref{table:bc_comp} lists the factor we use to multiply each cost to account for its implied dead-weight loss.\\
 
 \noindent Having constructed our cash flow, $\mathbb{E} (B_t - C_t)$, solving for $\rho$
 reduces to an algebraic exercise.\\
