--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -4,6 +4,7 @@
 
 \externaldocument{abc_comprehensivecba}
 \pagenumbering{roman}
+\renewcommand\theassumption{AA--\arabic{assumption}}
 
 \begin{document}
 \title{\Large \textbf{Appendix: \\ The Life-cycle Benefits of an Influential Early Childhood Intervention}}
@@ -50,11 +51,11 @@ The University of Chicago}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{C.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{C.\arabic{table}}
-\input{Appendices/Attrition}
+\input{Appendices/Methodology}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{D.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{D.\arabic{table}}
-\input{Appendices/Methodology}
+\input{Appendices/Attrition}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{E.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{E.\arabic{table}}
