--- a/output/abc_predict.tex
+++ b/output/abc_predict.tex
@@ -1,19 +1,23 @@
-\begin{tabular}{lccc} \toprule
- & (1) & (2) & (3) \\ \midrule
-Male & 15,127.641* & 12,124.182 & -624.472 \\
+\begin{tabular}{lccc} \hline
+ & (1) & (2) & (3) \\
+ & abcZ & abcZX & abcZL \\
+VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
+ &  &  &  \\
+male & 15,127.641* & 12,124.182 & -624.472 \\
  & (7,850.718) & (9,022.841) & (5,384.686) \\
-Mother's Education & 2,136.666 & 791.171 & -3,390.346 \\
+m\_ed0y & 2,136.666 & 791.171 & -3,390.346 \\
  & (2,151.633) & (2,335.011) & (2,246.745) \\
-PIAT (5-7) &  & -45.217 & -37.091 \\
+piatmath &  & -45.217 & -37.091 \\
  &  & (324.180) & (389.874) \\
-Education (30) &  & 8,200.214*** & 10,107.368*** \\
+years\_30y &  & 8,200.214*** & 10,107.368*** \\
  &  & (2,551.157) & (3,777.647) \\
-Labor Income (21) &  & 0.015 & 0.270 \\
+si21y\_inc\_labor &  & 0.015 & 0.270 \\
  &  & (0.403) & (0.296) \\
-BMI (34) &  &  & -320.535 \\
+si34y\_bmi &  &  & -320.535 \\
  &  &  & (241.455) \\
 Constant & 2,165.045 & -85,255.424* & -52,896.960 \\
- & (23,054.657) & (49,373.232) & (32,236.828) \\ \\ \midrule
+ & (23,054.657) & (49,373.232) & (32,236.828) \\
+ &  &  &  \\
 Observations & 132 & 110 & 76 \\
-$R^2$ & 0.035 & 0.180 & 0.312 \\ \bottomrule
+ R-squared & 0.035 & 0.180 & 0.312 \\ \hline
 \end{tabular}
